# webtarot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  fly.toml  lint.sh
.github/workflows/: ci.yml
backend/: Cargo.toml  README.md
backend/locales/: en.yml  pt.yml
backend/migrations/2025-11-28-233612-0000_create_readings/: down.sql  up.sql
backend/migrations/2025-11-29-015635-0000_create_users/: down.sql  up.sql
backend/migrations/2025-12-18-153847-0000_add_context_to_readings/: down.sql  up.sql
backend/migrations/2025-12-19-205256-0000_populate_reading_context/: up.sql
backend/src/: app.rs  database.rs  entity.rs  error.rs  handler.rs  interpretation.rs  main.rs  middleware.rs  model.rs  reading.rs  repository.rs  schema.rs  state.rs  stats.rs  test_helpers.rs  user.rs
backend/src/entity/: interpretation.rs  reading.rs  stats.rs  user.rs
backend/src/handler/: create_interpretation.rs  create_reading.rs  create_user.rs  delete_interpretation.rs  get_interpretation.rs  get_interpretation_history.rs  get_stats.rs  get_user.rs  log_in.rs  notify_websocket_handler.rs  update_user.rs
backend/src/middleware/: domain_redirect.rs  locale.rs  metrics.rs  user.rs
backend/src/repository/: error.rs  interpretation_repository.rs  user_repository.rs
cmdline/: Cargo.toml
cmdline/src/: main.rs
deployment/: nginx.conf
deployment/logstash/pipeline/: logstash.conf
frontend/: .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: i18n.ts  index.css  main.tsx  routeTree.gen.ts
frontend/src/backend/: api.ts  models.ts  mutations.ts  queries.ts  savedReadings.ts  user.ts  userId.ts
frontend/src/components/: CardDisplay.tsx  ReadingForm.tsx  ReadingStats.tsx  ReadingSubLayout.tsx  ReadingTab.tsx  ReadingTabs.tsx
frontend/src/components/layout/: AppShell.tsx  Footer.tsx
frontend/src/components/reading/: CardDisplay.tsx  CardSpinner.tsx  ReadingStats.tsx
frontend/src/context/: UserContext.tsx  UserContextBase.ts  useUser.ts
frontend/src/locales/: en.json  pt.json
frontend/src/routes/: __root.tsx  index.tsx  login.tsx  logout.tsx  profile.tsx  readings.tsx  signup.tsx
frontend/src/util/: cards.ts  useWindowDimensions.ts
shared/: Cargo.toml
shared/locales/: en.yml  pt.yml
shared/src/: explain.rs  lib.rs  model.rs  system_prompt.txt
(+13 files in other folders)
