[package]
name = "webtarot-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
webtarot-shared = { path = "../shared" }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tower-http = { version = "0.6.7", features = ["trace", "fs", "set-header"] }
tower = "0.5"
chrono = { version = "0.4.42", features = ["serde"] }
redis = { version = "0.32.7", features = ["connection-manager", "tokio-comp"] }
serde_json = "1.0.145"
futures-util = "0.3.31"
rust-i18n = "3.1.5"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.0"
dotenv = "0.15.0"
diesel = { version = "2.3.4", features = ["chrono", "postgres", "uuid", "serde_json"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
password-auth = "1.0.0"
hyper = { version = "1.8.1", features = ["full"] }
sentry = "0.34.0"
sentry-tracing = "0.34.0"
sentry-tower = "0.34.0"
lettre = "0.11.19"

[dev-dependencies]
serial_test = "3.2.0"
tower = { version = "0.5", features = ["util"] }
mockito = "1.7.1"
