[package]
name = "webtarot-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
strum = "0.27.2"
strum_macros = "0.27.2"
chrono = { version = "0.4.42", features = ["serde"] }
rust-i18n = "3.1.5"
